--- a/style.css
+++ b/style.css
@@ -13,6 +13,9 @@
 body {
   font-family: "Poppins", sans-serif;
 }
+.toaster-show {
+  z-index: 1;
+}
 
 /* ===================  
             common css end
@@ -38,6 +41,28 @@ body {
   right: 0;
   background: rgba(0, 0, 0, 0.7);
 }
-.toaster-show {
-  z-index: 1;
+.carousel-info {
+  position: absolute;
+  top: 500px;
 }
+
+/* ===================  
+         package section start
+====================*/
+
+.card-body p,
+li {
+  color: #848199 !important;
+  padding: 5px 0;
+}
+li .fas {
+  color: #5243c2;
+  font-size: 18px;
+  margin-right: 10px;
+}
+.card {
+  border-radius: 40px;
+}
+/* ===================  
+         package section end
+====================*/
