--- a/style.css
+++ b/style.css
@@ -85,3 +85,14 @@ li .fas {
 /* ===================  
          contact section end
 ====================*/
+
+/* ===================  
+         footer section start
+====================*/
+footer {
+  background-color: #212529;
+}
+
+/* ===================  
+         footer section end
+====================*/
